crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__words-markers.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "eng"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Reference corpus file for word-internal structural markers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Compound (+), syllable pause (^), clitic (~), lengthening (:), stress (ˈ)",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "icecream",
              "content": [
                {
                  "content": "ice",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 297,
                      "start": 296
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "cream",
                  "type": "text"
                }
              ],
              "raw_text": "ice+cream",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "twentyfive",
              "content": [
                {
                  "content": "twenty",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 318,
                      "start": 317
                    }
                  },
                  "type": "compound_marker"
                },
                {
                  "content": "five",
                  "type": "text"
                }
              ],
              "raw_text": "twenty+five",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "okay",
              "content": [
                {
                  "content": "o",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 333,
                      "start": 332
                    }
                  },
                  "type": "syllable_pause"
                },
                {
                  "content": "kay",
                  "type": "text"
                }
              ],
              "raw_text": "o^kay",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "jajaja",
              "content": [
                {
                  "content": "ja",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 348,
                      "start": 347
                    }
                  },
                  "type": "syllable_pause"
                },
                {
                  "content": "ja",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 351,
                      "start": 350
                    }
                  },
                  "type": "syllable_pause"
                },
                {
                  "content": "ja",
                  "type": "text"
                }
              ],
              "raw_text": "ja^ja^ja",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "definitely",
              "content": [
                {
                  "content": "de",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 365,
                      "start": 364
                    }
                  },
                  "type": "syllable_pause"
                },
                {
                  "content": "finitely",
                  "type": "text"
                }
              ],
              "raw_text": "de^finitely",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "no",
              "content": [
                {
                  "content": "no",
                  "type": "text"
                },
                {
                  "content": {
                    "count": 2,
                    "span": {
                      "end": 386,
                      "start": 384
                    }
                  },
                  "type": "lengthening"
                }
              ],
              "raw_text": "no::",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "hello",
              "content": [
                {
                  "content": {
                    "marker_type": "primary",
                    "span": {
                      "end": 397,
                      "start": 395
                    }
                  },
                  "type": "stress_marker"
                },
                {
                  "content": "hello",
                  "type": "text"
                }
              ],
              "raw_text": "ˈhello",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "leha",
              "content": [
                {
                  "content": "le",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 414,
                      "start": 413
                    }
                  },
                  "type": "clitic_boundary"
                },
                {
                  "content": "ha",
                  "type": "text"
                }
              ],
              "raw_text": "le~ha",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "afgedroog",
              "content": [
                {
                  "content": "af",
                  "type": "text"
                },
                {
                  "content": {
                    "span": {
                      "end": 428,
                      "start": 427
                    }
                  },
                  "type": "clitic_boundary"
                },
                {
                  "content": "gedroog",
                  "type": "text"
                }
              ],
              "raw_text": "af~gedroog",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "corpus",
        "language": [
          "eng"
        ],
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
